--- a/www/index.html
+++ b/www/index.html
@@ -49,11 +49,23 @@
   <body>
     <div class="container">
       <div class="row row-1">
-        <img src="screenshots/screenshot-1024.png" alt="Desktop view" class="screenshot">
+        <img
+          src="screenshots/screenshot-1024.png"
+          alt="Desktop view"
+          class="screenshot"
+        >
       </div>
       <div class="row row-2">
-        <img src="screenshots/screenshot-768.png" alt="Tablet view" class="screenshot">
-        <img src="screenshots/screenshot-400.png" alt="Mobile view" class="screenshot">
+        <img
+          src="screenshots/screenshot-768.png"
+          alt="Tablet view"
+          class="screenshot"
+        >
+        <img
+          src="screenshots/screenshot-400.png"
+          alt="Mobile view"
+          class="screenshot"
+        >
       </div>
     </div>
   </body>
