--- a/www/index.html
+++ b/www/index.html
@@ -3,69 +3,154 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>cross.stream</title>
+    <title>cross.stream - Responsive Demo</title>
     <style>
       body {
         margin: 0;
         padding: 20px;
         background: #0d1117;
+        color: #c9d1d9;
+        font-family:
+          -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans",
+          Helvetica, Arial, sans-serif;
       }
+
       .container {
         margin: 0 auto;
+        max-width: 1200px;
+      }
+
+      h1 {
+        text-align: center;
+        color: #58a6ff;
+        margin-bottom: 10px;
+      }
+
+      .subtitle {
+        text-align: center;
+        color: #8b949e;
+        margin-bottom: 40px;
+      }
+
+      .viewport-row {
         display: flex;
         flex-direction: column;
         gap: 20px;
+        margin-bottom: 40px;
       }
-      .row-1 {
-        max-width: 1024px;
-        margin: 0 auto;
+
+      .viewport-title {
+        color: #ffa657;
+        font-size: 18px;
+        font-weight: 600;
+        text-align: center;
       }
-      .row {
-        display: flex;
-        gap: 20px;
-      }
-      .screenshot {
-        max-width: 100%;
-        height: auto;
+
+      .iframe-container {
         border: 1px solid #30363d;
         border-radius: 8px;
+        overflow: hidden;
+        margin: 0 auto;
+        position: relative;
       }
-      .row-1 img {
-        width: 100%;
+
+      .desktop-iframe {
+        width: 1024px;
+        height: 600px;
       }
-      .row-2 {
+
+      .tablet-iframe {
+        width: 768px;
+        height: 600px;
+      }
+
+      .mobile-iframe {
+        width: 400px;
+        height: 600px;
+      }
+
+      iframe {
+        border: none;
+        display: block;
+      }
+
+      .responsive-row {
+        display: flex;
+        gap: 20px;
+        justify-content: center;
         align-items: flex-start;
       }
-      .row-2 img:first-child {
-        flex: 768;
-        width: calc(65.75% - 10px);
+
+      @media (max-width: 1200px) {
+        .desktop-iframe {
+          width: 100%;
+          max-width: 1024px;
+        }
       }
-      .row-2 img:last-child {
-        flex: 400;
-        width: calc(34.25% - 10px);
+
+      @media (max-width: 900px) {
+        .responsive-row {
+          flex-direction: column;
+          align-items: center;
+        }
+
+        .tablet-iframe, .mobile-iframe {
+          width: 100%;
+          max-width: 768px;
+        }
+
+        .mobile-iframe {
+          max-width: 400px;
+        }
       }
     </style>
   </head>
   <body>
     <div class="container">
-      <div class="row row-1">
-        <img
-          src="screenshots/screenshot-1024.png"
-          alt="Desktop view"
-          class="screenshot"
-        >
+      <h1>cross.stream Event Flow</h1>
+      <p class="subtitle">Live responsive demo at different viewport sizes</p>
+
+      <!-- Desktop View -->
+      <div class="viewport-row">
+        <div class="viewport-title">Desktop (1024px)</div>
+        <div class="iframe-container desktop-iframe">
+          <iframe
+            src="hero-diagram/"
+            width="1024"
+            height="600"
+            title="Desktop view of cross.stream demo"
+          >
+          </iframe>
+        </div>
       </div>
-      <div class="row row-2">
-        <img
-          src="screenshots/screenshot-768.png"
-          alt="Tablet view"
-          class="screenshot"
-        >
-        <img
-          src="screenshots/screenshot-400.png"
-          alt="Mobile view"
-          class="screenshot"
-        >
+
+      <!-- Tablet & Mobile Row -->
+      <div class="responsive-row">
+        <div class="viewport-row">
+          <div class="viewport-title">Tablet (768px)</div>
+          <div class="iframe-container tablet-iframe">
+            <iframe
+              src="hero-diagram/"
+              width="768"
+              height="600"
+              title="Tablet view of cross.stream demo"
+            >
+            </iframe>
+          </div>
+        </div>
+
+        <div class="viewport-row">
+          <div class="viewport-title">Mobile (400px)</div>
+          <div class="iframe-container mobile-iframe">
+            <iframe
+              src="hero-diagram/"
+              width="400"
+              height="600"
+              title="Mobile view of cross.stream demo"
+            >
+            </iframe>
+          </div>
+        </div>
       </div>
     </div>
   </body>
