--- a/www/hero-diagram/index.html
+++ b/www/hero-diagram/index.html
@@ -19,15 +19,10 @@
 
       <!-- Query Section -->
       <div class="query-section">
-        <terminal-panel title="Query the Event Store" actions>
-          <div slot="actions">
-            <div class="command-option selected" id="command-notes">
-              <div class="command-title">Get all notes</div>
-            </div>
-            <div class="command-option" id="command-goal">
-              <div class="command-title">Get current goal</div>
-            </div>
-          </div>
+        <terminal-panel
+          id="query-terminal"
+          title="Query the Event Store"
+        >
           <div id="query-output"></div>
         </terminal-panel>
       </div>
@@ -134,20 +129,18 @@
       let activeQuery = null;
 
       document.addEventListener("DOMContentLoaded", function () {
-        // Query selection
-        document.getElementById("command-notes").addEventListener(
-          "click",
-          function () {
-            executeQuery("notes");
-          },
-        );
+        // Set up terminal actions via JavaScript
+        const queryTerminal = document.getElementById("query-terminal");
+        queryTerminal.actions = [
+          { id: "notes", title: "Get all notes", selected: true },
+          { id: "goal", title: "Get current goal" },
+        ];
 
-        document.getElementById("command-goal").addEventListener(
-          "click",
-          function () {
-            executeQuery("goal");
-          },
-        );
+        // Handle action clicks from terminal panel
+        queryTerminal.addEventListener("action-click", function (e) {
+          const { actionId } = e.detail;
+          executeQuery(actionId);
+        });
 
         // Set default query to "Get all notes"
         executeQuery("notes");
@@ -164,22 +157,12 @@
       });
 
       function executeQuery(type) {
-        // Clear previous selections
-        document.querySelectorAll(".command-option").forEach((c) =>
-          c.classList.remove("selected")
-        );
-
         // Reset all event highlighting
         document.querySelectorAll("event-bubble").forEach((bubble) => {
           bubble.style.opacity = "1";
           bubble.style.transform = "scale(1)";
         });
 
-        // Select new command
-        const command = document.getElementById(`command-${type}`);
-
-        // Select new command (no deselection allowed)
-        command.classList.add("selected");
         activeQuery = type;
 
         // Show results and highlight relevant events
