--- a/www/hero-diagram/index.html
+++ b/www/hero-diagram/index.html
@@ -28,7 +28,7 @@
       </div>
 
       <div class="hero-layout">
-        <!-- Top row with console, arrow, and store -->
+        <!-- Top row with console and store -->
         <div class="input-store-row">
           <!-- Input commands showing executed commands -->
           <div class="console">
@@ -64,7 +64,6 @@
                 topic=".append notes"
               ></terminal-line>
             </terminal-panel>
-            <div class="arrow"></div>
           </div>
 
           <!-- Store with event bubbles -->
