--- a/www/index.html
+++ b/www/index.html
@@ -3,132 +3,215 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>cross.stream - Responsive Demo</title>
-    <style>
-      body {
-        margin: 0;
-        padding: 20px;
-        background: #0d1117;
-        color: #c9d1d9;
-        font-family:
-          -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans",
-          Helvetica, Arial, sans-serif;
-      }
-
-      .container {
-        margin: 0 auto;
-        max-width: 1200px;
-      }
-
-      h1 {
-        text-align: center;
-        color: #58a6ff;
-        margin-bottom: 10px;
-      }
-
-      .subtitle {
-        text-align: center;
-        color: #8b949e;
-        margin-bottom: 40px;
-      }
-
-      .viewport-row {
-        display: flex;
-        flex-direction: column;
-        gap: 20px;
-        margin-bottom: 40px;
-      }
-
-      .viewport-title {
-        color: #ffa657;
-        font-size: 18px;
-        font-weight: 600;
-        text-align: center;
-      }
-
-      .iframe-container {
-        border: 1px solid #30363d;
-        border-radius: 8px;
-        overflow: hidden;
-        margin: 0 auto;
-        position: relative;
-      }
-
-      .desktop-iframe {
-        width: 1024px;
-        height: 600px;
-      }
-
-      .tablet-iframe {
-        width: 768px;
-        height: 600px;
-      }
-
-      .mobile-iframe {
-        width: 400px;
-        height: 600px;
-      }
-
-      iframe {
-        border: none;
-        display: block;
-      }
-
-      .responsive-row {
-        display: flex;
-        gap: 20px;
-        justify-content: center;
-        align-items: flex-start;
-      }
-    </style>
+    <title>cross.stream - Event Flow</title>
+    <link rel="stylesheet" href="global.css">
+    <link rel="stylesheet" href="styles.css">
+    <script type="module" src="components/terminal-panel.js"></script>
+    <script type="module" src="components/terminal-line.js"></script>
+    <script type="module" src="components/event-bubble.js"></script>
   </head>
   <body>
     <div class="container">
       <h1>cross.stream Event Flow</h1>
-      <p class="subtitle">Live responsive demo at different viewport sizes</p>
+      <p class="subtitle">
+        Events sit in the store, ready to be queried by different pipelines
+      </p>
 
-      <!-- Desktop View -->
-      <div class="viewport-row">
-        <div class="viewport-title">Desktop (1024px)</div>
-        <div class="iframe-container desktop-iframe">
-          <iframe
-            src="hero-diagram/"
-            width="1024"
-            height="600"
-            title="Desktop view of cross.stream demo"
-          >
-          </iframe>
-        </div>
+      <!-- Query Section -->
+      <div class="query-section">
+        <terminal-panel
+          id="query-terminal"
+          title="Query the Event Store"
+        >
+          <div id="query-output"></div>
+        </terminal-panel>
       </div>
 
-      <!-- Tablet & Mobile Row -->
-      <div class="responsive-row">
-        <div class="viewport-row">
-          <div class="viewport-title">Tablet (768px)</div>
-          <div class="iframe-container tablet-iframe">
-            <iframe
-              src="hero-diagram/"
-              width="768"
-              height="600"
-              title="Tablet view of cross.stream demo"
-            >
-            </iframe>
-          </div>
+      <div class="input-store-row">
+        <!-- Input commands showing executed commands -->
+        <div class="console">
+          <terminal-panel>
+            <terminal-line
+              prompt="$"
+              command='"buy groceries"'
+              pipe="|"
+              topic=".append goal"
+            ></terminal-line>
+            <terminal-line
+              prompt="$"
+              command='"quick note about meeting"'
+              pipe="|"
+              topic=".append notes"
+            ></terminal-line>
+            <terminal-line
+              prompt="$"
+              command='"submit TPS report"'
+              pipe="|"
+              topic=".append notes"
+            ></terminal-line>
+            <terminal-line
+              prompt="$"
+              command='"learn cross.stream"'
+              pipe="|"
+              topic=".append goal"
+            ></terminal-line>
+            <terminal-line
+              prompt="$"
+              command='"review project docs"'
+              pipe="|"
+              topic=".append notes"
+            ></terminal-line>
+          </terminal-panel>
         </div>
 
-        <div class="viewport-row">
-          <div class="viewport-title">Mobile (400px)</div>
-          <div class="iframe-container mobile-iframe">
-            <iframe
-              src="hero-diagram/"
-              width="400"
-              height="600"
-              title="Mobile view of cross.stream demo"
+        <!-- Store with event bubbles -->
+        <div class="store">
+          <terminal-panel>
+            <terminal-line
+              prompt="$"
+              command="xs serve (xs-addr)"
+            ></terminal-line>
+            <div
+              class="embedded-component"
+              data-variant="store"
+              id="events-container"
             >
-            </iframe>
-          </div>
+              <event-bubble
+                type="goal"
+                content="buy groceries"
+                event-id="03d4q1o70y6ek0ig8hwy9q00n"
+              >
+              </event-bubble>
+              <event-bubble
+                type="notes"
+                content="quick note about meeting"
+                event-id="03d4q1qhbiv09ovtuhokw5yxv"
+              >
+              </event-bubble>
+              <event-bubble
+                type="notes"
+                content="submit TPS report"
+                event-id="03d4qbrxizqgav09m7hicksb0"
+              >
+              </event-bubble>
+              <event-bubble
+                type="goal"
+                content="learn cross.stream"
+                event-id="03d4qic9vqkve1krajjtlbavd"
+              >
+              </event-bubble>
+              <event-bubble
+                type="notes"
+                content="review project docs"
+                event-id="03d4qjwnhwudlfyg1ygemmt7b"
+              >
+              </event-bubble>
+            </div>
+          </terminal-panel>
         </div>
       </div>
     </div>
+
+    <script>
+      // Events are read from event-bubble elements
+      function getEvents() {
+        return Array.from(document.querySelectorAll("event-bubble"))
+          .map((bubble) => ({
+            topic: bubble.type,
+            content: bubble.content,
+          }));
+      }
+
+      let activeQuery = null;
+
+      document.addEventListener("DOMContentLoaded", function () {
+        // Set up terminal actions via JavaScript
+        const queryTerminal = document.getElementById("query-terminal");
+        queryTerminal.actions = [
+          { id: "notes", title: "Get all notes", selected: true },
+          { id: "goal", title: "Get current goal" },
+        ];
+
+        // Handle action clicks from terminal panel
+        queryTerminal.addEventListener("action-click", function (e) {
+          const { actionId } = e.detail;
+          executeQuery(actionId);
+        });
+
+        // Set default query to "Get all notes"
+        executeQuery("notes");
+      });
+
+      function executeQuery(type) {
+        // Reset all event highlighting
+        document.querySelectorAll("event-bubble").forEach((bubble) => {
+          bubble.style.opacity = "1";
+          bubble.style.transform = "scale(1)";
+        });
+
+        activeQuery = type;
+
+        // Show results and highlight relevant events
+        showQueryResults(type);
+        highlightMatchingEvents(type);
+      }
+
+      function showQueryResults(type) {
+        const queryOutput = document.getElementById("query-output");
+        let output = "";
+
+        if (type === "notes") {
+          output = `<div class="terminal-line">
+              <span class="prompt">$</span>
+              <span class="command">.cat | where topic == "notes" | insert content { .cas $in.hash }</span>
+            </div>
+            <pre class="terminal-output" data-variant="table">┌───┬───────┬─────────────────────────────────────────┐
+│ # │ topic │                content                  │
+├───┼───────┼─────────────────────────────────────────┤
+│ 0 │ notes │ quick note about meeting                │
+│ 1 │ notes │ submit TPS report                       │
+│ 2 │ notes │ review project docs                     │
+└───┴───────┴─────────────────────────────────────────┘</pre>`;
+        } else if (type === "goal") {
+          output = `<div class="terminal-line">
+              <span class="prompt">$</span>
+              <span class="command">.head goal | .cas</span>
+            </div>
+            <pre class="terminal-output">learn cross.stream</pre>`;
+        }
+
+        queryOutput.innerHTML = output;
+      }
+
+      function highlightMatchingEvents(type) {
+        document.querySelectorAll("event-bubble").forEach((bubble) => {
+          bubble.style.opacity = "0.3";
+          bubble.style.transform = "scale(0.95)";
+        });
+
+        if (type === "notes") {
+          // Highlight all notes events
+          document.querySelectorAll("event-bubble[type='notes']")
+            .forEach(
+              (bubble) => {
+                bubble.style.opacity = "1";
+                bubble.style.transform = "scale(1)";
+              },
+            );
+        } else if (type === "goal") {
+          // Highlight only the latest goal event
+          const goalBubbles = document.querySelectorAll(
+            "event-bubble[type='goal']",
+          );
+          if (goalBubbles.length > 0) {
+            const latestGoal = goalBubbles[goalBubbles.length - 1];
+            latestGoal.style.opacity = "1";
+            latestGoal.style.transform = "scale(1)";
+          }
+        }
+
+        // Keep highlighting while query is active
+      }
+    </script>
   </body>
 </html>
